// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GroupSidebar renders correctly 1`] = `
<div
  data-stylename="group-sidebar"
>
  <AboutSection
    description="the description, which is long enough to add a \\"Read More\\" button, the description, which is long enough to add a \\"Read More\\" button, the description, which is long enough to add a \\"Read More\\" button, the description, which is long enough to add a \\"Read More\\" button, the description, which is long enough to add a \\"Read More\\" button, "
    t={[Function]}
  />
  <SettingsLink
    canModerate={false}
    group={
      Object {
        "description": "the description, which is long enough to add a \\"Read More\\" button, the description, which is long enough to add a \\"Read More\\" button, the description, which is long enough to add a \\"Read More\\" button, the description, which is long enough to add a \\"Read More\\" button, the description, which is long enough to add a \\"Read More\\" button, ",
        "id": 1,
        "memberCount": 56,
        "name": "A Great Cause",
        "slug": "great-cause",
      }
    }
  />
  <MemberSection
    canModerate={false}
    memberCount={56}
    members={
      Array [
        Object {
          "id": 1,
        },
        Object {
          "id": 2,
        },
        Object {
          "id": 3,
        },
      ]
    }
    slug="great-cause"
  />
  <GroupLeaderSection
    groupId={1}
    leaders={
      Array [
        Object {
          "id": 4,
        },
        Object {
          "id": 5,
        },
        Object {
          "id": 6,
        },
      ]
    }
    slug="great-cause"
  />
</div>
`;

exports[`MemberSection Doesn't show total if it's < 1 1`] = `
<div
  data-stylename="member-section"
>
  <Link
    data-stylename="members-link"
    to="/groups/foo/members"
  >
    <div
      data-stylename="header"
    >
      Members
    </div>
    <div
      data-stylename="images-and-count"
    >
      <RoundImageRow
        data-stylename="image-row"
        imageUrls={
          Array [
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1150.jpg?26029",
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1099.jpg?68045",
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/439.jpg?10715",
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/501.jpg?36352",
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/178.jpg?42174",
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/749.jpg?66249",
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/414.jpg?52422",
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/369.jpg?90195",
          ]
        }
      />
    </div>
  </Link>
  <Link
    data-stylename="invite-link"
    to="/groups/foo/settings/invite"
  >
    <Button
      data-stylename="settings-link"
    >
      <Icon
        data-stylename="invite-icon"
        name="Invite"
      />
       
      Invite People
    </Button>
  </Link>
</div>
`;

exports[`MemberSection Formats total correctly if it's > 999 1`] = `
<div
  data-stylename="member-section"
>
  <Link
    data-stylename="members-link"
    to="/groups/foo/members"
  >
    <div
      data-stylename="header"
    >
      Members
    </div>
    <div
      data-stylename="images-and-count"
    >
      <RoundImageRow
        data-stylename="image-row"
        imageUrls={
          Array [
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1150.jpg?26029",
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1099.jpg?68045",
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/439.jpg?10715",
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/501.jpg?36352",
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/178.jpg?42174",
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/749.jpg?66249",
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/414.jpg?52422",
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/369.jpg?90195",
          ]
        }
      />
      <span
        data-stylename="members-total"
      >
        +5.6k
      </span>
    </div>
  </Link>
</div>
`;

exports[`MemberSection Shows invite link if canModerate is true 1`] = `
<div
  data-stylename="member-section"
>
  <Link
    data-stylename="members-link"
    to="/groups/foo/members"
  >
    <div
      data-stylename="header"
    >
      Members
    </div>
    <div
      data-stylename="images-and-count"
    >
      <RoundImageRow
        data-stylename="image-row"
        imageUrls={
          Array [
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1150.jpg?26029",
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1099.jpg?68045",
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/439.jpg?10715",
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/501.jpg?36352",
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/178.jpg?42174",
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/749.jpg?66249",
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/414.jpg?52422",
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/369.jpg?90195",
          ]
        }
      />
      <span
        data-stylename="members-total"
      >
        +5.6k
      </span>
    </div>
  </Link>
  <Link
    data-stylename="invite-link"
    to="/groups/foo/settings/invite"
  >
    <Button
      data-stylename="settings-link"
    >
      <Icon
        data-stylename="invite-icon"
        name="Invite"
      />
       
      Invite People
    </Button>
  </Link>
</div>
`;

exports[`MemberSection Shows invite link if has responsibility ADD_MEMBERS is true 1`] = `
<div
  data-stylename="member-section"
>
  <Link
    data-stylename="members-link"
    to="/groups/foo/members"
  >
    <div
      data-stylename="header"
    >
      Members
    </div>
    <div
      data-stylename="images-and-count"
    >
      <RoundImageRow
        data-stylename="image-row"
        imageUrls={
          Array [
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1150.jpg?26029",
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1099.jpg?68045",
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/439.jpg?10715",
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/501.jpg?36352",
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/178.jpg?42174",
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/749.jpg?66249",
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/414.jpg?52422",
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/369.jpg?90195",
          ]
        }
      />
      <span
        data-stylename="members-total"
      >
        +5.6k
      </span>
    </div>
  </Link>
</div>
`;
